Added a target option for /avatar command.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "deploy": "nodemon src/deploy-commands.js"
   },
   "repository": {
     "type": "git",
